assets/css/style.css
/* Import Google fonts */
@import url('https://fonts.googleapis.com/css2?family=Antic+Slab&family=Architects+Daughter&family=Duru+Sans&display=swap');

/* Asterisk wildcard selector to create a consistent starting point across different browsers and remove white edges on the sides and the top of the page */
*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* Basic styles */
body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    font-family: 'Duru Sans', sans-serif;
}
/* Header */
header {
    background-color: #FF8200;
    padding: 0 1rem;
    position: fixed;
    z-index: 99;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: top;
    padding-right: 0px;
    height: 75.4px;

}

header a {
    text-decoration: none;
    color: #323232;
}

/* H1 style */
h1 {
    font-family: 'Antic Slab', sans-serif;
}

/* Menu style */
#menu {
    list-style-type: none;
    font-size: 120%;
    letter-spacing: 1px;
}

#menu > li {
    margin-bottom: 0.5em;
    text-align: center;
}

.current {
    color: #232323;
    font-weight: bold;
    border-bottom: 2px solid #232323;
}

/* Hide the checkbox */

#menu-toggle {
    display: none;
}

/* Hide menu initially, menu styling */
#menu {
    display: none;
    position: absolute;
    left: 0;
    z-index: 100;
    background-color: #FF8200;
    width: 100%;
    top:75.4px;
    
}

/* Show the menu when the checkbox is checked */
#menu-toggle:checked ~ nav #menu {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding-top: 15px;
}

/* Logo link styling */
#logo-link {
    flex-grow: 1;
    order: -1;
}

/* Menu icon styling */
#menu-label {
    font-size: 45px;
    align-self: flex-start;
    padding-top: 3px;
    padding-right: 7px;
}

/* Logo style */
#logo {
    font-family: 'Architects Daughter', sans-serif;
    text-transform: uppercase;
    color: #000000;
    letter-spacing: 2px;
    padding-top: 5px;
    font-size: 25px;
    width:70px;
}

/*Main content */
main {
    background-color: #000000;
    color: #ffffff;
    /* Make the main element to take up any excess space and push footer to the bottom */
    flex: 1 0 auto;
    /* Push main content down to adjust to the new header height */
    margin-top: 75.4px;
}

/*Footer */
footer {
    background-color: #009A44;
    padding: 5px 0;
}

.social-icons {
    display: flex;
    justify-content: space-evenly;
}

.social-icons a {
    font-size: 200%;
    margin: 0 25px;
    color: #ffffff;
}

/* Media query: tablets and larger screens (768px and up) */
@media screen and (min-width: 768px) {

    /* Header */
    header {
        display: flex;
        justify-content: space-between;
        align-items: center;
    }

    nav {
        display: flex;
        align-items: center;
        width: auto;
    }

    #menu {
        display: flex;
        flex-direction: row;
        justify-content: flex-end;
        align-items: center;
        top: 25px;
        padding-right: 20px;
        background: transparent;
        gap: 20px;
    }

    /* Add vertical dividers between menu items */
    #menu li:not(:last-child)::after {
        content: "|";
        margin-left: 20px;
        color: #323232;
    }

    #menu-label {
        display: none;
    }

    #logo {
        width: auto;
        padding-left: 4px;
        font-size: 250%;  
    }

    #logo-link {
        display: flex;
        align-items: center;
    }
   
}

/* Larger devices (laptops & desktops, 992px and up) */
@media screen and (min-width: 992px) {
    #menu a:hover {
        border-bottom: 0.5px solid #323232;
    }
}

